--- a/herofade.css
+++ b/herofade.css
@@ -22,6 +22,7 @@
   margin: 0;
   grid-auto-rows: 100vh;
   gap: 2vh;
+  background-color: #666;
 } */
 
 .hero {
@@ -77,55 +78,70 @@
 
   background-attachment: fixed;
   display: grid;
+  grid-template: repeat(4, 1fr) / repeat(4, 1fr);
+  grid-template-areas:
+    ". . . ."
+    ". t t ."
+    ". b b b"
+    ". b b b";
 }
 
-.bio--text {
-  z-index: 2;
+#bio--title {
+  grid-area: t;
+}
+
+#bio--blurb {
+  grid-area: b;
   column-count: 2;
-  padding: 3em 3em;
+  padding-right: 2vw;
 }
 
 .gallery {
   height: 100vh;
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr repeat(4, 4fr) 1fr 1fr;
-  grid-template-rows: 1fr 1fr repeat(4, 4fr) 1fr 1fr;
-
-  background-color: teal;
+  grid-template-columns: 50vw 1fr 1fr;
+  grid-template-rows: 1fr 50vh 1fr;
+  grid-template-areas:
+    "painting title title"
+    "painting ..... ....."
+    "painting blurb blurb";
+  margin-top: 2vh;
 }
-.painting {
-  height: 70vh;
-  grid-column: 3 / 6;
-  grid-row: 3 / 7;
 
-  border: 5px solid white;
-  border-radius: 5px;
+.painting--container {
+  grid-area: painting;
+
   transition: all 500ms ease-in-out 800ms;
 }
 
-.painting:hover {
+.painting {
+  height: 100%;
+  width: auto;
+  border: 5px solid white;
+  border-radius: 5px;
+}
+
+.painting--container:hover {
   z-index: 5;
-  scale: 1.5;
 }
 
 .painting--title {
-  grid-column: span 3 / -2;
-  grid-row: 2 / 3;
-  /* z-index: 1; */
+  grid-area: title;
+  z-index: 1;
   background-color: rgba(0, 0, 0, 0.2);
   color: white;
   text-align: center;
-  font-size: 8vw;
+  font-size: 5vw;
   border-radius: 5px;
   text-transform: capitalize;
 }
 
 .painting--blurb {
-  grid-column: span 3 / -2;
-  grid-row: span 2 / -2;
+  grid-area: blurb;
   background-color: rgba(250, 250, 250, 0.3);
   text-align: end;
-  padding: 1em;
+  padding-right: 1em;
   border-radius: 5px;
 }
 
