--- a/styles.css
+++ b/styles.css
@@ -263,14 +263,15 @@ nav {
   margin-bottom: 1vw;
   min-width: 222px;
   display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 .gallery__item__container {
   border-radius: var(--corner);
-
   margin: 1vw auto;
   border: none;
-  width: 98vw;
+  justify-content: center;
+  display: flex;
 }
 
 .gallery__item {
@@ -280,17 +281,17 @@ nav {
   flex-wrap: wrap;
   align-content: center;
   justify-content: center;
+  width: 100%;
 }
 
 .gallery__item__image {
   width: 90%;
-  margin: 1vw auto;
+  margin: 0 auto;
   object-fit: contain;
 }
 
 .gallery__item__image img {
   max-width: 100%;
-  max-height: 70vh;
   display: block;
   margin: 0 auto;
   border: solid 2px black;
@@ -310,18 +311,6 @@ nav {
   flex-direction: column;
   flex-wrap: wrap;
   max-width: max-content;
-}
-
-@media screen and (min-width: 800px) {
-  .gallery {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  .gallery__item__container {
-    width: 48vw;
-    justify-content: center;
-    display: flex;
-  }
 }
 
 /* ************ */
