--- a/styles.css
+++ b/styles.css
@@ -287,16 +287,18 @@ nav {
 .gallery__item__image {
   width: 90%;
   margin: 0 auto;
-  object-fit: contain;
+  object-fit: cover;
+  overflow: hidden;
+  border: solid 2px black;
+  border-radius: var(--corner);
+  box-shadow: var(--boxShadow1);
 }
 
 .gallery__item__image img {
   max-width: 100%;
   display: block;
   margin: 0 auto;
-  border: solid 2px black;
-  border-radius: var(--corner);
-  box-shadow: var(--boxShadow1);
+  cursor: pointer;
 }
 
 .gallery__item__text {
@@ -311,6 +313,55 @@ nav {
   flex-direction: column;
   flex-wrap: wrap;
   max-width: max-content;
+}
+
+/* ***** */
+/* Modal */
+/* ***** */
+
+.modal {
+  background: rgba(0, 0, 0, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease-out;
+}
+.modal.open {
+  opacity: 1;
+  cursor: pointer;
+  pointer-events: all;
+  z-index: 10;
+}
+
+.modal__image {
+  position: absolute;
+  max-height: 80%;
+  max-width: 80%;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%) scale(0.5);
+  transition: all 0.5s ease-out;
+  cursor: default;
+}
+
+.modal__image.open {
+  opacity: 1;
+  pointer-events: all;
+  transform: translate(-50%, -40%) scale(1);
+}
+
+.modal__caption {
+  position: absolute;
+  bottom: 5%;
+  margin-left: 50%;
+  transform: translate(-50%, -5%);
+  width: 100%;
+  text-align: center;
+  font-size: var(--text-clamp-medium);
 }
 
 /* ************ */
