--- a/Pages/sketches.css
+++ b/Pages/sketches.css
@@ -20,6 +20,19 @@
 .sketch img {
   max-width: 100%;
   display: block;
+  cursor: pointer;
+}
+
+.modal__image {
+  max-height: 90%;
+  max-width: 90%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal__image.open {
+  transform: translate(-50%, -50%) scale(1);
 }
 
 @media screen and (min-width: 450px) {
