--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,15 @@
 :root {
   --clr-orange: #f09a19;
   --clr-white: #cccac7;
-  --boxShadow1: 0px 0px 20px 10px rgba(0, 0, 0, 0.7);
+  --clr-grey: rgb(58, 58, 58);
+  --boxShadow1: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
   --boxShadow2: 0px 0px 20px 10px rgba(0, 0, 0, 0.9);
   --bg-overlay--light: rgba(0, 0, 0, 0.4);
   --bg-overlay--dark: rgba(0, 0, 0, 0.6);
   --text-clamp-small: clamp(1rem, 3vmin, 2rem);
-  --text-clamp-medium: clamp(1rem, 4vmin, 4rem);
+  --text-clamp-medium: clamp(1rem, 3.5vmin, 2.5rem);
   --text-clamp-large: clamp(1rem, 5vmax, 9vmax);
-  --corner: 10px;
+  --corner: 4px;
 }
 
 /* fonts */
@@ -26,7 +27,7 @@
 }
 
 body {
-  background-color: rgb(58, 58, 58);
+  background-color: var(--clr-grey);
   font-family: "Courgette", sans-serif;
   color: var(--clr-white);
 }
@@ -43,6 +44,7 @@ button {
   border: none;
   font-family: inherit;
   transition: all 500ms ease-in-out;
+  cursor: pointer;
 }
 
 button:hover,
@@ -50,6 +52,30 @@ button:focus {
   background-color: var(--clr-orange);
   color: whitesmoke;
   transition: all 500ms ease-in-out;
+}
+
+.svg-icon {
+  transition: all 500ms ease-in-out;
+}
+
+button:hover > .svg-icon {
+  stroke: whitesmoke;
+}
+
+.st0 {
+  transition: all 500ms ease-in-out;
+}
+
+@media (max-width: 600px) {
+  .svg-icon {
+    height: 10;
+    width: 10;
+    stroke-width: 5;
+  }
+}
+
+button:hover .st0 {
+  fill: whitesmoke;
 }
 
 /* ********** */
@@ -68,7 +94,7 @@ button:focus {
   width: auto;
   height: auto;
   padding: 0.5em;
-  margin: 0.5em;
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -76,10 +102,12 @@ button:focus {
   background: rgba(0, 0, 0, 0.2);
   border-radius: 50%;
   transition: all 400ms ease-in-out;
+  cursor: pointer;
 }
 
 #hamburger--close {
   display: none;
+  transition: all 400ms ease-in-out;
 }
 
 .nav-toggle-label:hover {
@@ -106,6 +134,7 @@ button:focus {
 nav {
   position: fixed;
   width: 100%;
+  max-height: 50vh;
   margin-top: 5em;
   display: flex;
   flex-direction: column;
@@ -138,31 +167,37 @@ nav {
 .hero {
   height: 100vh;
   width: 100%;
-  background-image: radial-gradient(
+  background-color: #000;
+  /* background-image:  */
+  /* radial-gradient(
       circle at left bottom,
       rgba(0, 0, 0, 0.1) 0%,
       rgba(0, 0, 0, 0.4) 30%,
       rgba(0, 0, 0, 0.9) 60%
-    ),
-    url("./Images/BackgroundImages/jaguarlefthead2.jpg");
+    ), */
+  /* url("./Images/BackgroundImages/jaguarlefthead2Vignette.jpg");
   background-position: bottom left;
   background-size: cover;
+  background-repeat: no-repeat; */
   display: flex;
   justify-content: flex-end;
   overflow: hidden;
   position: relative;
   z-index: 2;
 }
-
-@media screen and (min-width: 2400px) {
+/* 
+@media screen and (min-width: 800px) {
   .hero {
-    background-image: radial-gradient(
-        circle at 500px 90vh,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 0.95) 60%
-      ),
-      url("./Images/BackgroundImages/jaguarleftBig.jpg");
+    background-image: url("./Images/BackgroundImages/jaguarleftBigVignette.webp");
   }
+} */
+
+#hero_img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  object-fit: cover;
+  height: 100vh;
 }
 
 .hero__title {
@@ -170,6 +205,7 @@ nav {
   padding-right: 3vw;
   margin-top: 5vh;
   font-family: "Arizonia", cursive;
+  z-index: 99;
 }
 
 #david {
@@ -264,6 +300,7 @@ nav {
   min-width: 222px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-flow: dense;
 }
 
 .gallery__item__container {
@@ -282,23 +319,24 @@ nav {
   align-content: center;
   justify-content: center;
   width: 100%;
+  max-height: 100%;
 }
 
 .gallery__item__image {
   width: 90%;
   margin: 0 auto;
-  object-fit: cover;
-  overflow: hidden;
-  border: solid 2px black;
-  border-radius: var(--corner);
-  box-shadow: var(--boxShadow1);
+  object-fit: contain;
 }
 
 .gallery__item__image img {
   max-width: 100%;
+  max-height: 70vh;
   display: block;
   margin: 0 auto;
   cursor: pointer;
+  border: solid 1px rgb(48, 48, 48);
+  border-radius: var(--corner);
+  box-shadow: var(--boxShadow1);
 }
 
 .gallery__item__text {
@@ -314,13 +352,17 @@ nav {
   flex-wrap: wrap;
   max-width: max-content;
 }
+.gallery h2 {
+  font-size: var(--text-clamp-medium);
+}
 
 /* ***** */
 /* Modal */
 /* ***** */
 
 .modal {
-  background: rgba(0, 0, 0, 1);
+  background: var(--clr-grey);
+  /* background: rgba(58, 58, 58, 0.96); */
   position: fixed;
   top: 0;
   left: 0;
@@ -328,41 +370,44 @@ nav {
   height: 100%;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.3s ease-out;
+  transition: all 0.5s ease-out;
 }
 .modal.open {
   opacity: 1;
   cursor: pointer;
   pointer-events: all;
   z-index: 10;
+  transition: all 0.5s ease-out;
 }
 
 .modal__image {
   position: absolute;
-  max-height: 80%;
-  max-width: 80%;
-  top: 40%;
+  max-height: 95%;
+  max-width: 95%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -40%) scale(0.5);
+  transform: translate(-50%, -50%) scale(0.5);
   transition: all 0.5s ease-out;
   cursor: default;
+  border-radius: var(--corner);
 }
 
 .modal__image.open {
   opacity: 1;
   pointer-events: all;
-  transform: translate(-50%, -40%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: all 0.5s ease-out;
 }
 
-.modal__caption {
+/* .modal__caption {
   position: absolute;
   bottom: 5%;
   margin-left: 50%;
   transform: translate(-50%, -5%);
   width: 100%;
   text-align: center;
-  font-size: var(--text-clamp-medium);
-}
+  font-size: var(--text-clamp-small);
+} */
 
 /* ************ */
 /* form styling */
@@ -372,7 +417,7 @@ footer {
   width: 100%;
   min-height: 100vh;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("./Images/Sketches/Full/3_Shires_Head.jpg");
+    url("./Images/BackgroundImages/3_Shires_Head.jpg");
   background-position: center;
   background-size: cover;
   position: relative;
@@ -411,7 +456,7 @@ form {
   box-shadow: var(--boxShadow2);
   border-radius: var(--corner);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 2vw;
   margin: 2vw;
   padding: 0 2rem;
